# DQMonstersDB-API

./: .detaignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .spaceignore  DQmonsters.xlsx  Dockerfile  README.md  Spacefile  app.py  compose.yaml  create_database.py  csv practice.py  database.db  docker-compose.yml  main.py  model.py  models.py  pyproject.toml  pytest.py  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: autotest.yaml  test2.yaml
app/: create_database.py  create_skill_link_csv.py  database.py  main.py  model_enums.py  models.py
app/csv_files/: DQM1_skill_combo.csv  DQM1_skills.csv
csv_files/: DQM1_breeding_combo.csv  DQM1_items.csv  DQM1_monsterdetails.csv  DQM1_skills.csv  practice_monster_skill_link.csv  practice_skill.csv
src/app/: create_database.py  main.py  model_enums.py  models.py
src/csv_files/: DQM1_monster_family.csv  DQM1_monster_skill_link.csv  practice_monster_skill_table.csv
src/tests/: conftest.py
src/tests/test_json/: test_all_monsters.json  test_family.json  test_monsters_query_family.json  test_read_items.json  test_read_skills.json  test_read_skills_category_recovery.json  test_read_skills_skillfamily_zap.json
tests/: conftest.py  pytest.py  test_endpoints.py  test_insert_data.py  test_main.py
tests/test_json/: test_all_monsters.json  test_family.json  test_monsters_query_family.json  test_read_items.json  test_read_skills.json  test_read_skills_category_recovery.json  test_read_skills_skillfamily_zap.json
