[project]
name = "dqmonstersdb-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
]

[tool.mypy]
ignore_missing_imports = true 
disallow_untyped_calls = true
untyped_calls_exclude = ["sqlmodel"]
